# moses

./: .gitignore  README.md  pyproject.toml  setup.py
moses/: __init__.py  interfaces.py  models_storage.py  script_utils.py  utils.py
moses/aae/: __init__.py  config.py  model.py  trainer.py
moses/baselines/: __init__.py  combinatorial.py  hmm.py  ngram.py
moses/char_rnn/: __init__.py  config.py  model.py  trainer.py
moses/dataset/: __init__.py  dataset.py
moses/latentgan/: __init__.py  config.py  model.py  trainer.py
moses/metrics/: __init__.py  metrics.py  utils.py
moses/metrics/NP_Score/: npscorer.py
moses/metrics/SA_Score/: UnitTestSAScore.py  sascorer.py
moses/organ/: __init__.py  config.py  metrics_reward.py  model.py  trainer.py
moses/vae/: __init__.py  config.py  misc.py  model.py  trainer.py
scripts/: distribution_plots.py  eval.py  prepare_dataset.py  print_table.py  run.py  sample.py  split_dataset.py  train.py
tests/: test_baselines.py  test_metrics.py
